# run-a-job

./: .env.example  .gitignore  QUICKSTART.md  README.md  good-design.txt  pyproject.toml
.github/workflows/: run-job-example.yml
examples/: demo.py  real_world_examples.py  simple_demo.py
run_a_job/: __init__.py  cli.py
run_a_job/api/: main.py
run_a_job/automation/: __init__.py  account_creator.py  browser.py  captcha.py
run_a_job/config/: __init__.py  logging.py  settings.py
run_a_job/llm/: __init__.py  workflow_translator.py
run_a_job/repositories/: __init__.py  base.py  job_repository.py
run_a_job/scheduling/: __init__.py  models.py  scheduler.py
run_a_job/services/: __init__.py  job_service.py
tests/unit/: test_config.py  test_models.py
